src/test/deca/context/invalid/ContextSansObjet/OperationsUnaires/Not_String.deca
//Description:
//  Vérification contextuelle du type de sortie l'opérateur ! sur un type float. Si le résultat générait un string il serait affichable.
//
//Résultat:
//  Erreur contextuelle
//  ligne 8 : Le type boolean n'est pas affichable (les types affichables sont int,float et string)
{
   println(!true);
}